examples/invalid/template_no_abstract.jd
template t {
    conclusion c is "The system is correct"
    strategy s is "Testing"
    s supports c
    evidence e is "Test results"
    e supports s
}
